# ohos_quickjs

./: LICENSE  README.md  build-profile.json5  deploy.sh
.github/workflows/: build.yml
AppScope/: app.json5
AppScope/resources/base/element/: string.json
entry/: oh-package-lock.json5  oh-package.json5
entry/src/main/ets/components/: TestSection.ets
entry/src/main/ets/pages/: AdvancedTest.ets  ArrayTest.ets  BasicScriptTest.ets  ErrorTest.ets  FunctionTest.ets  Index.ets  ObjectTest.ets  TypeCheckTest.ets
entry/src/main/ets/utils/: ScriptLoader.ets
entry/src/main/resources/base/profile/: main_pages.json
entry/src/main/resources/rawfile/scripts/: array_convert.js  array_ops.js  basic_script.js  dict_convert.js  fibonacci.js  function_add.js  global_vars.js  property_access.js  property_names.js
quickjs/: CHANGELOG.md  Index.ets  README.md  oh-package-lock.json5  oh-package.json5
quickjs/example/: usage.md
quickjs/src/main/: module.json5
quickjs/src/main/cpp/: CMakeLists.txt  handle_registry.h  napi_init.cpp  native_reference.h  native_value.h  quickjs_ext.cpp  quickjs_headers.h  quickjs_native_engine.h  quickjs_native_string.cpp  quickjs_native_typed_array.cpp  quickjs_native_typed_array.h  quickjs_native_value.cpp  quickjs_native_value.h
quickjs/src/main/cpp/types/libquickjs/: Index.d.ts  oh-package.json5
quickjs/src/main/ets/: JSContext.ets  JSValue.ets
quickjs/src/ohosTest/: module.json5
